--- a/src/server/resources/default_config.properties
+++ b/src/server/resources/default_config.properties
@@ -11,6 +11,7 @@ string_login_no_entry=You haven't registered yet.
 string_register_entry_exists=You're already registered, so use /login.
 string_auth_required=You need to log in.
 string_register_confirm=Confirm the password with /confirm <password> or rerun this command to choose a different one.
+string_confirm_register_first=Please run /register first.
 
 string_login_bad=Invalid password.
 string_confirm_bad=That's not the password you typed in earlier.
