--- a/src/server/resources/default_config.properties
+++ b/src/server/resources/default_config.properties
@@ -3,6 +3,7 @@
 string_usage_login=Usage\: /login <password>
 string_usage_register=Usage\: /register <password>
 string_usage_confirm=Usage\: /confirm <password>
+string_usage_chpasswd=Usage\: /chpasswd <old password> <new password>\n/chpasswd user <username> <new password>
 
 string_login=Log in with /login <password>.
 string_register=Welcome\! Register with /register <password>.
@@ -18,3 +19,6 @@ string_confirm_bad=That's not the password you typed in earlier.
 
 string_authed_first=Welcome.
 string_authed=Welcome back.
+
+string_bad_characters=The password may not contain spaces or colons.
+string_ops_only=Only operators may use this command.
