--- a/src/server/resources/default_config.properties
+++ b/src/server/resources/default_config.properties
@@ -3,7 +3,12 @@
 string_usage_login=Usage\: /login <password>
 string_usage_register=Usage\: /register <password>
 string_usage_confirm=Usage\: /confirm <password>
-string_usage_chpasswd=Usage\: /chpasswd <old password> <new password>\n/chpasswd user <username> <new password>
+string_usage_chpasswd=Usage\: /chpasswd <old password> <new password>
+string_usage_unregister=Usage\: /unregister <password>
+string_usage_duckyauth=Usage\: /duckyauth {password|reload|unregister} <...>
+string_usage_duckyauth_password=Usage\: /duckyauth password <user> <new password>
+string_usage_duckyauth_reload=Usage\: /duckyauth reload
+string_usage_duckyauth_unregister=Usage\: /duckyauth unregister <user>
 
 string_login=Log in with /login <password>.
 string_register=Welcome\! Register with /register <password>.
@@ -16,9 +21,14 @@ string_confirm_register_first=Please run /register first.
 
 string_login_bad=Invalid password.
 string_confirm_bad=That's not the password you typed in earlier.
+string_unregistered=Unregistered you.
 
+string_no_such_user=No such user.
+string_user_created=New user registered.
+string_user_created=User unregistered.
+string_password_changed=Password changed.
 string_authed_first=Welcome.
 string_authed=Welcome back.
 
-string_bad_characters=The password may not contain spaces or colons.
+string_bad_password=The password may not contain spaces, and it may not be empty.
 string_ops_only=Only operators may use this command.
